[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/UI/Fonts/SmallFontItalic.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/UI/Scripts/CheckBoxEx.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/Themes/Theme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/Scenes/Labels/LabelEx.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/UI/Scripts/CheckBox.gd" type="Script" id=5]

[node name="CheckBoxEx" type="HBoxContainer"]
margin_right = 154.0
margin_bottom = 20.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelEx" parent="." instance=ExtResource( 4 )]
margin_right = 130.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Unknown CheckBox:"
font_style = 8

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 134.0
margin_right = 154.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 10
theme = ExtResource( 3 )
script = ExtResource( 5 )
[connection signal="gui_input" from="." to="." method="_on_CheckBoxEx_gui_input"]
[connection signal="toggled" from="CheckBox" to="CheckBox" method="_on_CheckBox_toggled"]
[connection signal="toggled" from="CheckBox" to="." method="_on_CheckBox_toggled"]
